# task-stack-manager-tg-bot

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  config_reader.py  configuration.py
src/bot/: __init__.py  __main__.py  dispatcher.py
src/bot/filters/: __init__.py  is_register.py
src/bot/handlers/: __init__.py  start.py
src/bot/keyboards/: __init__.py  main_menu.py
src/bot/logic/: __init__.py  start.py
src/bot/middlewares/: __init__.py  db_session.py
src/bot/structures/: data_structure.py  lexicon.py
src/bot/structures/keyboards/: __init__.py  devinfo_board.py  menu_board.py
src/db/: __init__.py  database.py  models.py  requests.py
src/db/models/: stack.py  task.py  user.py
src/db/repositories/: abstract.py  user.py
src/simple_db/: requests.py
